http integration tests
