# api/openapi.yaml
@@ -27,6 +27,31 @@ paths:
                     $ref: '#/components/schemas/Token'
         '500':
           $ref: '#/components/responses/5xx'
+  /user:
+    get:
+      tags:
+        - user
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - user_type
+                  - user_id
+                  - email
+                properties:
+                  user_type:
+                    $ref: '#/components/schemas/UserType'
+                  user_id:
+                    $ref: '#/components/schemas/UserId'
+                  email:
+                    $ref: '#/components/schemas/Email'
+        '500':
+          $ref: '#/components/responses/5xx'
   /login:
     post:
       description: >-
@@ -316,112 +341,37 @@ components:
                 example: 12345
   schemas:
     UserId:
-      type: string
-      format: uuid
-      description: Идентификатор пользователя
-      example: 'cae36e0f-69e5-4fa8-a179-a52d083c5549'
+      $ref: './components.yaml#/components/schemas/UserId'
     Address:
-      type: string
-      description: Адрес дома
-      example: Лесная улица, 7, Москва, 125196
+      $ref: './components.yaml#/components/schemas/Address'
     Year:
-      type: integer
-      description: Год постройки дома
-      example: 2000
-      minimum: 0
+      $ref: './components.yaml#/components/schemas/Year'
     Developer:
-      type: string
-      nullable: true
-      description: Застройщик
-      example: Мэрия города
+      $ref: './components.yaml#/components/schemas/Developer'
     House:
-      type: object
-      description: Дом
-      required:
-        - id
-        - address
-        - year
-      properties:
-        id:
-          $ref: '#/components/schemas/HouseId'
-        address:
-          $ref: '#/components/schemas/Address'
-        year:
-          $ref: '#/components/schemas/Year'
-        developer:
-          $ref: '#/components/schemas/Developer'
-        created_at:
-          $ref: '#/components/schemas/Date'
-        update_at:
-          $ref: '#/components/schemas/Date'
+      $ref: './components.yaml#/components/schemas/House'
     HouseId:
-      type: integer
-      description: Идентификатор дома
-      example: 12345
-      minimum: 1
+      $ref: './components.yaml#/components/schemas/HouseId'
     Price:
-      type: integer
-      description: Цена квартиры в у.е.
-      example: 10000
-      minimum: 0
+      $ref: './components.yaml#/components/schemas/Price'
     Rooms:
-      type: integer
-      description: Количество комнат в квартире
-      example: 4
-      minimum: 1
+      $ref: './components.yaml#/components/schemas/Rooms'
     Flat:
-      type: object
-      description: Квартира
-      required:
-        - id
-        - house_id
-        - price
-        - rooms
-        - status
-      properties:
-        id:
-          $ref: '#/components/schemas/FlatId'
-        house_id:
-          $ref: '#/components/schemas/HouseId'
-        price:
-          $ref: '#/components/schemas/Price'
-        rooms:
-          $ref: '#/components/schemas/Rooms'
-        status:
-          $ref: '#/components/schemas/Status'
+      $ref: './components.yaml#/components/schemas/Flat'
     Status:
-      type: string
-      enum: [created, approved, declined, on moderation]
-      description: Статус квартиры
-      example: approved
+      $ref: './components.yaml#/components/schemas/Status'
     FlatId:
-      type: integer
-      description: Идентификатор квартиры
-      example: 123456
-      minimum: 1
+      $ref: './components.yaml#/components/schemas/FlatId'
     Email:
-      type: string
-      format: email
-      description: Email пользователя
-      example: test@gmail.com
+      $ref: './components.yaml#/components/schemas/Email'
     Password:
-      type: string
-      description: Пароль пользователя
-      example: Секретная строка
+      $ref: './components.yaml#/components/schemas/Password'
     UserType:
-      type: string
-      enum: [client, moderator]
-      description: Тип пользователя
-      example: moderator
+      $ref: './components.yaml#/components/schemas/UserType'
     Token:
-      type: string
-      description: Авторизационный токен
-      example: auth_token
+      $ref: './components.yaml#/components/schemas/Token'
     Date:
-      type: string
-      description: Дата + время
-      format: date-time
-      example: 2017-07-21T17:32:28Z
+      $ref: './components.yaml#/components/schemas/Date'
   securitySchemes:
     bearerAuth:
       type: http
