# internal/repo/schema/house.go
@@ -25,7 +25,7 @@ type (
 )
 
 func (h House) SelectColumns() []string {
-	return []string{"houses.id as h_house_ID", "address", "year", "developer", "created_at", "last_flat_added_at"}
+	return []string{"houses.id as h_house_id", "address", "year", "developer", "created_at", "last_flat_added_at"}
 }
 
 func (h House) ValuesInsert() []any {
